--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Halaman Profil Bandung</title>
+    <title>LLatar Belakang Sekolah</title>
 
     <!-- My Own Styles -->
     <link rel="stylesheet" href="assets/styles/style.css" />
@@ -11,32 +11,26 @@
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;700&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;700&display=swap" rel="stylesheet" />
   </head>
 
   <body>
     <header>
       <div class="jumbotron">
-        <h1>Bandung</h1>
-        <p>
-          Kota metropolitan terbesar di Provinsi Jawa Barat, sekaligus menjadi ibu kota provinsi
-          tersebut.
-        </p>
+        <h1>Latar Belakang Pendidikan</h1>
+        <p></p>
       </div>
 
       <nav>
         <ul>
           <li>
-            <a href="#sejarah">Sejarah</a>
+            <a href="#sd">Sekolah Dasar</a>
           </li>
           <li>
-            <a href="#geografis">Geografis</a>
+            <a href="#smp">Sekolah Menengah Pertama</a>
           </li>
           <li>
-            <a href="#wisata">Wisata</a>
+            <a href="#sma">Sekolah Menengah Atas</a>
           </li>
         </ul>
       </nav>
@@ -45,83 +39,39 @@
     <main>
       <!-- Konten artikel -->
       <div id="content">
-        <article id="sejarah" class="card">
-          <h2>Sejarah</h2>
-          <img src="assets/image/history.jpg" alt="sejarah" class="featured-image" />
+        <article id="sd" class="card">
+          <h2>Sekolah Dasar</h2>
+          <img src="assets/image/sd.jpg" alt="sd" class="featured-image" />
           <p>
-            Kata Bandung berasal dari kata bendung atau bendungan karena terbendungnya sungai
-            Citarum oleh lava Gunung Tangkuban Parahu yang lalu membentuk telaga. Legenda yang
-            diceritakan oleh orang-orang tua di Bandung mengatakan bahwa nama Bandung diambil dari
-            sebuah kendaraan air yang terdiri dari dua perahu yang diikat berdampingan yang disebut
-            perahu bandung yang digunakan oleh Bupati Bandung, R.A. Wiranatakusumah II, untuk
-            melayari Ci Tarum dalam mencari tempat kedudukan kabupaten yang baru untuk menggantikan
-            ibu kota yang lama di Dayeuhkolot.
+            Saat Umur saya 6 Tahun tepatnya pada tahun 2011 saya memulai perjalanan pendidikan saya di Sekolah Dasar Bakti Nusantara 666, disana saya banyak mempelajari ilmu agama dan juga belajar membaca dengan mengikuti les membaca. Saya
+            bersekolah di Sekolah Dasar Bakti Nusantara 666 hanya 3 tahun,tepatnya pada kelas 3 semester 2 saya pindah ke Sekolah Dasar Negeri Cempaka Arum. Saya bersekolah di SD Cempaka Arum sampai lulus,dan saya lulus dengan nilai rata
+            rata UN 7,5.
           </p>
 
-          <p>
-            Berdasarkan filosofi Sunda, kata Bandung juga berasal dari kalimat Nga-Bandung-an Banda
-            Indung, yang merupakan kalimat sakral dan luhur karena mengandung nilai ajaran Sunda.
-            Nga-Bandung-an artinya menyaksikan atau bersaksi. Banda adalah segala sesuatu yang
-            berada di alam hidup yaitu di bumi dan atmosfer, baik makhluk hidup maupun benda mati.
-            Sinonim dari banda adalah harta. Indung berarti Ibu atau Bumi, disebut juga sebagai Ibu
-            Pertiwi tempat Banda berada.
-          </p>
+          <p></p>
         </article>
 
-        <article id="geografis" class="card">
-          <h2>Geografis</h2>
-          <img src="assets/image/geografis.jpg" alt="geografis" class="featured-image" />
+        <article id="smp" class="card">
+          <h2>Sekolah Menengah Pertama</h2>
+          <img src="assets/image/smp.jpeg" alt="smp" class="featured-image" />
           <p>
-            Kota Bandung dikelilingi oleh pegunungan, sehingga bentuk morfologi wilayahnya bagaikan
-            sebuah mangkok raksasa,[9] secara geografis kota ini terletak di tengah-tengah provinsi
-            Jawa Barat, serta berada pada ketinggian ±768 m di atas permukaan laut, dengan titik
-            tertinggi di berada di sebelah utara dengan ketinggian 1.050 meter di atas permukaan
-            laut dan sebelah selatan merupakan kawasan rendah dengan ketinggian 675 meter di atas
-            permukaan laut.
+            Saya melanjutkan pendidikan di SMP Negeri 54 Bandung pada tahun 2017 lebih tepatnya saat saya berusia 12 Tahun, disini saya susah mulai aktif ekstrakurikuler pramuka.Saya sempat mengikuti kegiatan Gladian Pemimpin Regu
+            (DIANPINRU) dan juga mewakili sekolah untuk mengikuti Jambore Nasional.Pada saat mendekati ujian nasional dengan rasa tidak menyangka pandemi "Virus Covid-19" menyebar dimana-mana, hal ini menyebabkan saya lulus dengan tidak
+            mengikuti USBN atau UNBK pada saat itu.
           </p>
 
-          <p>
-            Kota Bandung dialiri dua sungai utama, yaitu Sungai Cikapundung dan Sungai Citarum
-            beserta anak-anak sungainya yang pada umumnya mengalir ke arah selatan dan bertemu di
-            Sungai Citarum. Dengan kondisi yang demikian, Bandung selatan sangat rentan terhadap
-            masalah banjir terutama pada musim hujan.
-          </p>
+          <p></p>
         </article>
 
-        <article id="wisata" class="card">
-          <h2>Wisata</h2>
+        <article id="sma" class="card">
+          <h2>Sekolah Menengah Atas</h2>
+          <img src="assets/image/sman-27-bandung_20170728_150005.jpg" alt="sma" class="featured-image" />
           <p>
-            Sejak dibukanya Jalan Tol Cipularang, kota Bandung telah menjadi tujuan utama dalam
-            menikmati liburan akhir pekan terutama dari masyarakat yang berasal dari Jakarta
-            sekitarnya. Selain menjadi kota wisata belanja, kota Bandung juga dikenal dengan
-            sejumlah besar bangunan lama berarsitektur peninggalan Belanda.
+            Dengan pandemi yang masih berlangsung, saya melanjutkan pendidikan di SMA Negeri 27 Bandung pada tahun 2020. Dengan sistem pembelajaran yang dilakukan secara daring, saya kurang memahami materi yang diberikan oleh guru sehingga
+            saya tidak fokus untuk belajar pada saat itu. Pembelajaran tatap muka diberlakukan pada tahun 2022 dengan mematuhi protokol kesehatan. Selang beberapa bulan, pengumuman siswa elligible di umumkan dan saya masuk sebagai siswa
+            elligible, namun saya tidak memanfaatkan status tersebut dengan baik yang akhirnya saya ditolak pada PTN yang saya pilih. Kemudian saya mengikuti UTBK dengan pilihan pertama saya Universitas Padjajaran dengan prodi Statistika
+            dan juga pilihan kedua saya UIN Sunan Gunung Djati dengan prodi Terknik Informatika.Setelah menunggu pengumuman,alhamdulillah saya diterima di pilihan kedua saya yaitu UIN Sunan Gunung Djati dengan prodi Teknik Informatika.
           </p>
-
-          <section>
-            <h3>Farm House Lembang</h3>
-            <img src="assets/image/farm-house.jpg" alt="farm house" class="featured-image" />
-            <p>
-              Berada di jalur utama Bandung-Lembang, Farm House menjadi objek wisata yang tidak
-              pernah sepi pengunjung. Selain karena letaknya strategis, kawasan ini juga
-              menghadirkan nuansa wisata khas Eropa. Semua itu diterapkan dalam bentuk spot swafoto
-              Instagramable.
-            </p>
-          </section>
-
-          <section>
-            <h3>Observatorium Bosscha</h3>
-            <img src="assets/image/bosscha.jpg" alt="bosscha" class="featured-image" />
-            <p>
-              Memiliki beberapa teleskop, antara lain, Refraktor Ganda Zeiss, Schmidt Bimasakti,
-              Refraktor Bamberg, Cassegrain GOTO, dan Teleskop Surya. Refraktor Ganda Zeiss adalah
-              jenis teleskop terbesar untuk meneropong bintang. Benda ini diletakkan pada atap kubah
-              sehingga saat teropong digunakan, atap tersebut harus dibuka. Observatorium Bosscha
-              boleh dikunjungi oleh siapapun, tanpa tiket. Namun, bagi yang ingin menggunakan
-              teleskop Zeiss, wajib mendaftarkan diri. Untuk instansi atau lembaga pendidikan,
-              diberikan jadwal hari Selasa sampai Jumat. Sementara itu, kunjungan individu dibuka
-              setiap hari Sabtu.
-            </p>
-          </section>
         </article>
       </div>
 
@@ -129,11 +79,10 @@
       <aside>
         <article class="profile card">
           <header>
-            <h2>Kota Bandung</h2>
-            <p>Kota Kembang Paris van Java</p>
+            <h2>Raditya Raihan</h2>
+            <p>Student Of Infomatics Engineering</p>
             <figure>
-              <img src="assets/image/bandung-badge.png" />
-              <figcaption>Lambang</figcaption>
+              <img src="assets/image/pp.jpg" />
             </figure>
           </header>
 
@@ -142,24 +91,24 @@
 
             <table>
               <tr>
-                <th>Negara</th>
-                <td>Indonesia</td>
+                <th>Tanggal Lahir:</th>
+                <td>Bandung, 07-Mei-2005</td>
               </tr>
               <tr>
-                <th>Hari jadi</th>
-                <td>25 September 1810</td>
+                <th>Hobby :</th>
+                <td>OLahraga dan Membaca</td>
               </tr>
               <tr>
-                <th>Luas Total</th>
-                <td>167.67 km<sup>2</sup></td>
+                <th>Tinggi Badan :</th>
+                <td>172 cm<sup></sup></td>
               </tr>
               <tr>
-                <th>Bahasa Daerah</th>
-                <td>Sunda</td>
+                <th>Berat Badan :</th>
+                <td>71</td>
               </tr>
               <tr>
-                <th>Kode Telepon</th>
-                <td>+62 22</td>
+                <th>Email :</th>
+                <td>radityananno@gmail.com</td>
               </tr>
             </table>
           </section>
